# sailcut

./: .addcopyright  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  Doxyfile  Makefile.am  Makefile.common  Makefile.mac  Makefile.win32  README  README.md  README.win32  TODO  acinclude.m4  autogen.sh  configure.ac  configure.in  mingw32.toolchain  refresh  release  sailcut-installer.nsi.in  sailcut.kdevelop  sailcut.nsi.in  sailcut.plist.in  sailcut.pri  sailcut.pro
admin/: qt.m4.in  utils.m4.in
cmake/: Bundle.plist.in  SailcutDocs.cmake  sailcut.rc.in
debian/: changelog  control  copyright  menu  rules  (+2 more)
doc/: CMakeLists.txt  Makefile.am  Makefile.docbook  checkgfx.pl  makedocs  sailcut-handbook.css  sailcut-html.xsl
doc/en/: Makefile.am  coordinates_system.fig  head_gores_definition.fig  index.docbook  model-sailcut-en.sxw  rigplan.fig  sail_edges.fig  sail_seams.fig  sailplan.fig
doc/es/: Makefile.am  coordinates_system.fig  develop_panel_drawing.fig  head_gores_definition.fig  index.docbook  rigplan.fig  sail_edges.fig  sail_seams.fig  sailplan.fig
doc/fr/: Makefile.am  coordinates_system.fig  develop_panel_drawing.fig  head_gores_definition.fig  index.docbook  rigplan.fig  sail_edges.fig  sail_seams.fig  sailcut-math.lyx  sailcut-profile-fr.sxc  sailplan.fig
icons/: Makefile.am  generate  panelgroup.xpm  point.xpm  sailcut.icns  sailcut.rc  sailcut.xpm
src/: CMakeLists.txt  Makefile.am  app.cpp  app.h  boatdef-panel.cpp  boatdef-panel.h  boatdef.cpp  boatdef.h  disparea.cpp  disparea.h  fileio.cpp  fileio.h  filewriter.cpp  filewriter.h  formboat.cpp  formboat.h  formdef.cpp  formdocument.h  formhelp.cpp  formhelp.h  formhull.cpp  formhull.h  formhulldef.cpp  formhulldef.h  formhulldefbase.ui  formmain.cpp  formmain.h  formmould.cpp  formmould.h  formpanelgroup.cpp  formpanelgroup.h  formprint.cpp  formprint.h  formrig.cpp  formrig.h  formrigdef.cpp  formrigdef.h  formrigdefbase.ui  formsail.cpp  formsail.h  (+75 more)
src/boatcpp/: Makefile.am  rigdef.h
src/geocpp/: AUTHORS  CMakeLists.txt  Makefile.am  core.cpp  core.h  geocpp.h  geometry.cpp  geometry.h  geotest.cpp  geotest.dsp  matrix.cpp  matrix.h  matrix4x4.cpp  matrix4x4.h  rect.cpp  rect.h  subspace.cpp  subspace.h  vect_geom.cpp  vect_geom.h  vector.cpp  vector.h
src/sailcpp/: CMakeLists.txt  Makefile.am  boatdef.cpp  boatdef.h  hulldef.cpp  hulldef.h  hullworker.cpp  hullworker.h  panel.cpp  panel.h  panelgroup.cpp  panelgroup.h  rigdef.cpp  rigdef.h  rigworker.cpp  rigworker.h  sailcalc.cpp  sailcalc.h  saildef.cpp  saildef.h  sailmould.cpp  sailmould.h  sailtest.cpp  sailworker.cpp  sailworker.h
src/ts/: CMakeLists.txt  Makefile.am  refresh  sailcut.de.ts  sailcut.dk.ts  sailcut.fi.ts  sailcut.fr.ts  sailcut.it.ts  sailcut.nl.ts  sailcut.no.ts  sailcut.pt.ts  sailcut.ru.ts  sailcut.template.ts  sailcut_de.ts  sailcut_dk.ts  sailcut_fr.ts  sailcut_it.ts  sailcut_nl.ts  sailcut_pt.ts  sailcut_ru.ts  template.ts
trunk/: TODO  (+1 more)
trunk/icons/: Makefile.am
trunk/sailcut/: .addcopyright  AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile  Makefile.am  Makefile.common  Makefile.mac  Makefile.win32  README  TODO  autogen.sh  configure.ac  configure.in  mingw32.toolchain  refresh  sailcut.kdevelop  sailcut.nsi.in  sailcut.plist.in
trunk/sailcut/admin/: qt.m4.in  sailcut.m4.in
trunk/sailcut/cmake/: Bundle.cmd.in  Bundle.start.in  Info.plist.in  RelativePath.cmake  SailcutDocs.cmake
trunk/sailcut/cmake/modules/: IconUtilities.cmake  SailcutIcons.cmake  ShipDepends.cmake
trunk/sailcut/cmake/scripts/: shipdepends.py
trunk/sailcut/debian/: changelog  control  copyright  sailcut-doc.doc-base  sailcut.install  watch
trunk/sailcut/doc/: CMakeLists.txt  Makefile.am  Makefile.docbook  sailcut-html.xsl  sailcut-pdf.xsl
trunk/sailcut/doc/en/: Makefile.am  index.docbook  rigplan.fig  sail_edges.fig  sail_seams.fig
trunk/sailcut/doc/es/: Makefile.am  index.docbook  sail_seams.fig  sailplan.fig
trunk/sailcut/doc/fr/: coordinates_system.fig  index.docbook  model-sailcut-fr.sxw  rigplan.fig  sail_seams.fig  sailplan.fig
trunk/sailcut/icons/: CMakeLists.txt  Makefile.am  panel.xpm  resource.h  sailcut.xpm
trunk/sailcut/src/: CMakeLists.txt  Makefile.am  boatdef-panel.cpp  boatdef-panel.h  boatdef.cpp  disparea.cpp  disparea.h  fileio.cpp  fileio.h  filewriter.cpp  filewriter.h  formboat.cpp  formboat.h  formdef.h  formdefbase.ui  formdocument.cpp  formdocument.h  formhelp.cpp  formhelp.h  formhull.cpp  formhull.h  formhulldef.cpp  formhulldef.h  formhulldefbase.ui  formmain.cpp  formmain.h  formmould.cpp  formmould.h  formpanelgroup.cpp  formpanelgroup.h  formprint.cpp  formprint.h  formrig.cpp  formrig.h  formrigdef.cpp  formrigdef.h  formrigdefbase.ui  formsail.cpp  formsail.h  formsaildef.cpp  (+70 more)
trunk/sailcut/src/boatcpp/: hulldef.cpp
trunk/sailcut/src/examples/: Star45-JIB.xml
trunk/sailcut/src/geocpp/: CMakeLists.txt  COPYING  Makefile.am  core.cpp  core.h  geocpp.h  geometry.cpp  geometry.h  geotest.cpp  matrix.cpp  matrix.h  subspace.cpp  subspace.h  vect_real.cpp  vector.cpp  vector.h
trunk/sailcut/src/sailcpp/: CMakeLists.txt  Makefile.am  boatdef.cpp  boatdef.h  hulldef.cpp  hulldef.h  hullworker.cpp  hullworker.h  panel.cpp  panel.h  panelgroup.cpp  panelgroup.h  rigdef.cpp  rigdef.h  rigworker.cpp  rigworker.h  sailcalc.cpp  sailcalc.h  saildef.cpp  saildef.h  sailmould.cpp  sailtest.cpp  sailworker.cpp  sailworker.h
trunk/sailcut/src/ts/: CMakeLists.txt  Makefile.am  sailcut.de.ts  sailcut.dk.ts  sailcut.es.ts  sailcut.fr.ts  sailcut.it.ts  sailcut.nl.ts  sailcut.no.ts  sailcut.pt.ts  sailcut.ru.ts  sailcut.template.ts  sailcut_de.ts  sailcut_dk.ts  sailcut_fr.ts  sailcut_it.ts  sailcut_nl.ts  sailcut_no.ts  sailcut_pt.ts  sailcut_ru.ts  template.ts
trunk/sailcut/test-cases/: First-25.7S.hulldef  Parche-main.saildef  Vela Parche.saildef  default-staysail.saildef  first-25.7-jib-creux-haut.saildef  first-25.7-jib-plat.saildef  first-25.7-jib.saildef  first-25.7S.rigdef  hull1.3.3.hulldef  jib1.2.4.saildef  lucyIIIMitre.saildef  luff-curve.ods  main1.2.4.saildef  testBugMitre2.saildef
(+72 files in other folders)
