AM_CPPFLAGS = -I$(top_srcdir)/src

noinst_HEADERS = 
noinst_LIBRARIES = libboatcpp.a

libboatcpp_a_SOURCES = panel.h panelgroup.h saildef.h sailcalc.h sailmould.h sailworker.h
libboatcpp_a_SOURCES = panel.cpp panelgroup.cpp saildef.cpp sailcalc.cpp sailmould.cpp sailworker.cpp

#sailtest_SOURCES = sailtest.cpp
#sailtest_LDFLAGS = $(QT_LDFLAGS)
#sailtest_LDADD   = geocpp/libgeocpp.a $(LIB_QT)

